Fixed a bunch of things, another big update